[package]
name = "rust_crate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
ieee80211 = { git = "https://github.com/Frostie314159/ieee80211-rs", rev = "fa4e8ee06d318166f26e6b2598d3a3c95ea77c46" }
esp-println = { version = "0.9.1", features = ["esp32", "uart"], default-features = false }

[features]
default = []

[build-dependencies]
bindgen = "0.69.4"
