[package]
name = "rust_crate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
ieee80211 = { git = "https://github.com/Frostie314159/ieee80211-rs", rev = "aa4e40084744dd58e42b44cc2a2fccbed87d40c9" }
esp-println = { version = "0.9.1", features = ["esp32", "uart"], default-features = false }
llc = { git = "https://github.com/Frostie314159/llc-rs.git", version = "0.1.0" }
ether-type = { version = "0.1.3" }

[features]
default = []

[build-dependencies]
bindgen = "0.69.4"
